--- a/scss/main.scss
+++ b/scss/main.scss
@@ -75,9 +75,9 @@ body::-webkit-scrollbar {
 /* ползунок скроллбара */
 body::-webkit-scrollbar-thumb {
   // padding-right: 10px;
-  background-color: rgba(205, 67, 255, 0.349);
-  // border-radius:  0 8px 8px 0;
-  // border-radius: 8px;
+  background-color: #0333697c;
+  border-radius:  0 8px 8px 0;
+  border-radius: 8px;
   // box-shadow: inset 1px 1px 10px #f3faf7;
 }
 
