--- a/css/main.css
+++ b/css/main.css
@@ -395,6 +395,12 @@
           object-fit: contain;
           width: 100%;
           height: 100%; }
+        @media all and (max-width: 800px) {
+          .section-price .slider .slider-wrap .slide img {
+            object-fit: cover; } }
+        @media all and (min-width: 800px) {
+          .section-price .slider .slider-wrap .slide img {
+            object-fit: contain; } }
       .section-price .slider .slider-wrap .slide.active {
         opacity: 1;
         transition: all 0.5s ease-in; }
@@ -698,7 +704,9 @@ body::-webkit-scrollbar {
 
 /* ползунок скроллбара */
 body::-webkit-scrollbar-thumb {
-  background-color: rgba(205, 67, 255, 0.349); }
+  background-color: #0333697c;
+  border-radius: 0 8px 8px 0;
+  border-radius: 8px; }
 
 body::-webkit-scrollbar-thumb:hover {
   background-color: #253861; }
