--- a/css/section-main.css
+++ b/css/section-main.css
@@ -381,6 +381,12 @@
           object-fit: contain;
           width: 100%;
           height: 100%; }
+        @media all and (max-width: 800px) {
+          .section-price .slider .slider-wrap .slide img {
+            object-fit: cover; } }
+        @media all and (min-width: 800px) {
+          .section-price .slider .slider-wrap .slide img {
+            object-fit: contain; } }
       .section-price .slider .slider-wrap .slide.active {
         opacity: 1;
         transition: all 0.5s ease-in; }
