--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -436,6 +436,17 @@ box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
                     width: 100%;
                     height: 100%;
                 }
+
+                @media all and (max-width: 800px){
+                    img {
+                        object-fit: cover;
+                    }
+                }
+                @media all and (min-width: 800px){
+                    img {
+                        object-fit: contain;
+                    }
+                }
             }
 
             .slide.active {
