--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -73,6 +73,7 @@ $mainTransition : 'all 0.1s ease';
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top center;
+    // background-position: 0 0;
     position: relative;
     transition: $mainTransition;
     position: fixed;
@@ -96,6 +97,7 @@ $mainTransition : 'all 0.1s ease';
             font-size: 0.7rem;
             // color: rgb(255, 0, 212);
             color: #CE43FF;
+            // color: red;
             // color: #EC14C9;
             // font-family: Rochester;
             font-family: 'Great Vibes';
@@ -541,22 +543,24 @@ box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
 .section-contacts {
 
     @include section;
-
+    // background-color: red;
+    height: 85vh !important;
     .bg-contacts {
         position: absolute;
 
         width: 100%;
-        height: 100%;
-        top: 0;
+        height: 100% ;
+        bottom: 0 ;
         left: 0;
         object-fit: contain;
         // margin-left: -25%;
         z-index: -1;
+        // background-color: red;
     }
 
 
     .text {
-        margin-top: 20vh;
+        // margin-top: 25vh;
     }
 
 
@@ -605,6 +609,24 @@ box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
 
 }
 
+footer{
+    width: 100%;
+    height: 15vh;
+    background-color: #0B1922;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .footer__container{
+        width: 50%;
+        // background-color: red;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+}
 
 
 
@@ -636,6 +658,30 @@ box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
             font-size: 0.7rem;
         }
     }
+}
+@media all and (min-width: 800px) and (max-width: 1030px) and (orientation: portrait) {
+
+    
+    .section-main {
+        background-image: url('../images/bg/mainbig2.jpg');
+        background-position: 70% 0% !important;
+        .text-main {
+            // background-color: red;
+            width: 60%;
+            top: -7vh !important;
+            left: 5% !important;
+        }
+    }
+
+    .section{
+        .swiper-container {
+            width: 50% !important;
+            height: 50vh !important;
+            background-color: pink ;
+        }
+    }
+  
+
 }
 
 @media all and (min-width: 800px) {
@@ -684,6 +730,7 @@ box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
 
     .section-main {
         background-image: url('../images/bg/mainbig2.jpg');
+        // background-position: 70% 0% !important;
     }
 
     .section.flex {
