--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -559,8 +559,13 @@ box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
     }
 
 
+
     .text {
         // margin-top: 25vh;
+        h1{
+            margin-top: 25vh;
+
+        }
     }
 
 
