--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -557,7 +557,15 @@ box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
         z-index: -1;
         // background-color: red;
     }
-
+.contacts-icons{
+    width: 300px;
+    // background-color: red;
+    margin : auto;
+    margin-top: 15%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
 
     .text {
