--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -41,28 +41,31 @@ $mainTransition : 'all 0.1s ease';
     background-color: white;
     z-index: 1;
 
-    @media all and (max-width: 800px){
-        .bg{
+    @media all and (max-width: 800px) {
+        .bg {
             display: none;
         }
-        .bgM{
+
+        .bgM {
             display: block;
             position: absolute;
             bottom: 10%;
-            left : 0;
+            left: 0;
             width: 100%;
             z-index: -1;
         }
     }
-    @media all and (min-width: 800px){
-        .bg{
+
+    @media all and (min-width: 800px) {
+        .bg {
             display: block;
         }
-        .bgM{
+
+        .bgM {
             display: none;
         }
     }
- 
+
 }
 
 .section-main {
@@ -169,7 +172,7 @@ $mainTransition : 'all 0.1s ease';
         // padding: 5px 45px;
         padding: 0.2rem 1.5rem;
         // height: 20%;
-        border-radius: 20px;
+        border-radius: 6px;
         // background-color: rgba(4, 124, 255, 0.5);
         // background-color: rgba(205, 67, 255, 0.555);
         background-color: black;
@@ -186,9 +189,9 @@ $mainTransition : 'all 0.1s ease';
         // -webkit-box-shadow: 1px 9px 24px 23px rgba(34, 60, 80, 0.16);
         // -moz-box-shadow: 1px 9px 24px 23px rgba(34, 60, 80, 0.16);
         // box-shadow: 1px 9px 24px 23px rgba(34, 60, 80, 0.16);
-        -webkit-box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
--moz-box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
-box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
+        -webkit-box-shadow: 7px 12px 18px 0px rgba(34, 60, 80, 0.2);
+        -moz-box-shadow: 7px 12px 18px 0px rgba(34, 60, 80, 0.2);
+        box-shadow: 7px 12px 18px 0px rgba(34, 60, 80, 0.2);
         transition: all 0.5s ease;
     }
 
@@ -208,7 +211,7 @@ box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
         display: inline-block;
     }
 
-   
+
 
     // button 4
     $primaryColor : black;
@@ -218,9 +221,12 @@ box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
         padding: 0.1rem 1.5rem;
         border: 3px solid $primaryColor;
         transition: all 300ms ease;
-        box-shadow: 0px 4px 10px 2px rgba(black, 0.2);
+        // box-shadow: 0px 4px 10px 2px rgba(black, 0.2);
+        -webkit-box-shadow: 6px 4px 18px 0px rgba(34, 60, 80, 0.2);
+        -moz-box-shadow: 6px 4px 18px 0px rgba(34, 60, 80, 0.2);
+        box-shadow: 6px 4px 18px 0px rgba(34, 60, 80, 0.2);
         cursor: pointer;
-        border-radius: 20px;
+        border-radius: 12px;
         // background-color: #fff;
         // padding: 10px;
 
@@ -246,10 +252,19 @@ box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
         object-fit: contain;
         z-index: -1;
     }
-    .btn{
-        background-color: #67D1FF;
+
+    .btn {
+        // background-color: #67D1FF;
+        background-color: #7DB3ED;
         border: none;
     }
+
+    .btn:hover {
+        // background-color: #67D1FF;
+        background-color: #F7CBF1;
+
+    }
+
 
 
 
@@ -267,7 +282,7 @@ box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
 .section-inc {
     @include section;
 
-    .btn{
+    .btn {
         background-color: #515151;
         border: none;
     }
@@ -279,7 +294,7 @@ box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
         bottom: 5vh;
         right: 5%;
         width: 90% !important;
-   
+
     }
 }
 
@@ -298,11 +313,12 @@ box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
         left: 5%;
         z-index: -1;
     }
-    .btn{
+
+    .btn {
         background-color: #BFBEBE;
         border: none;
     }
- 
+
 
     .swiper-container {
         // margin-top: 10vh;
@@ -320,7 +336,7 @@ box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
         width: 90% !important;
         // top: 25vh;
         left: 5%;
-        height: 80% ;
+        height: 80%;
         z-index: -1;
         top: 10%;
 
@@ -333,7 +349,8 @@ box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
         // background-size: cover;
         // transform: rotate3d(1, 2, -1, 192deg);
     }
-    .btn{
+
+    .btn {
         background-color: #CCAE81;
         border: none;
     }
@@ -365,10 +382,12 @@ box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
         // height: 80vh;
         // border: 1px solid red;
     }
-    .btn{
+
+    .btn {
         background-color: #8EC9FF;
         border: none;
     }
+
     .swiper-container {
         height: 60vh;
 
@@ -439,12 +458,13 @@ box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
                     height: 100%;
                 }
 
-                @media all and (max-width: 800px){
+                @media all and (max-width: 800px) {
                     img {
                         object-fit: cover;
                     }
                 }
-                @media all and (min-width: 800px){
+
+                @media all and (min-width: 800px) {
                     img {
                         object-fit: contain;
                     }
@@ -545,32 +565,35 @@ box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
     @include section;
     // background-color: red;
     height: 85vh !important;
+
     .bg-contacts {
         position: absolute;
 
         width: 100%;
-        height: 100% ;
-        bottom: 0 ;
+        height: 100%;
+        bottom: 0;
         left: 0;
         object-fit: contain;
         // margin-left: -25%;
         z-index: -1;
         // background-color: red;
     }
-.contacts-icons{
-    width: 300px;
-    // background-color: red;
-    margin : auto;
-    margin-top: 15%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+
+    .contacts-icons {
+        width: 300px;
+        // background-color: red;
+        margin: auto;
+        margin-top: 15%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 
 
     .text {
+
         // margin-top: 25vh;
-        h1{
+        h1 {
             margin-top: 25vh;
 
         }
@@ -622,7 +645,7 @@ box-shadow: 0px 5px 16px 14px rgba(34, 60, 80, 0.2);
 
 }
 
-footer{
+footer {
     width: 100%;
     height: 15vh;
     background-color: #0B1922;
@@ -631,7 +654,8 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
-    .footer__container{
+
+    .footer__container {
         width: 50%;
         // background-color: red;
         display: flex;
@@ -672,12 +696,14 @@ footer{
         }
     }
 }
+
 @media all and (min-width: 800px) and (max-width: 1030px) and (orientation: portrait) {
 
-    
+
     .section-main {
         background-image: url('../images/bg/mainbig2.jpg');
         background-position: 70% 0% !important;
+
         .text-main {
             // background-color: red;
             width: 60%;
@@ -686,14 +712,14 @@ footer{
         }
     }
 
-    .section{
+    .section {
         .swiper-container {
             width: 50% !important;
             height: 50vh !important;
-            background-color: pink ;
+            background-color: pink;
         }
     }
-  
+
 
 }
 
