--- a/css/section-main.css
+++ b/css/section-main.css
@@ -482,6 +482,7 @@
 
 .swiper-container {
   width: 100%;
+  overflow: hidden !important;
   margin-top: 3vh;
   margin-bottom: 50px;
   height: 55vh; }
